# Cloud_AI_Centric_Course

./: .env.example  .gitignore  README.md  out.txt  out2.txt  pyproject.toml
modulo_01_langchain_fundamentals/: README.md  config.yaml  main.py  pyproject.toml
modulo_01_langchain_fundamentals/01_introduccion_langchain/: demo.py  exercise.py
modulo_01_langchain_fundamentals/02_structured_outputs/: config.yaml  main.py
modulo_01_langchain_fundamentals/03_runnables_lcel/: config.yaml  exercise.py  main.py
modulo_02_rag/: README.md
modulo_02_rag/src/: __init__.py  agentic_rag.py  main.py
modulo_02_rag/vector_databases/: config.yaml  main.py  pyproject.toml
modulo_02_rag/vector_databases/01_embeddings_y_similitud/: config.yaml  demo.py
modulo_02_rag/vector_databases/02_chromadb_fundamentos/: config.yaml  exercise.py  main.py
modulo_02_rag/vector_databases/03_rag_basico/: config.yaml  exercise.py  main.py
modulo_02_rag/vector_databases/04_rag_avanzado/: config.yaml  main.py
modulo_02_rag/vector_databases/shared/: __init__.py
modulo_02_rag/vector_databases/src/modulo_02_vector_databases/: __init__.py
modulo_02_rag/vector_databases/src/modulo_02_vector_databases/shared/: logger.py
modulo_03_gcp/: 01_role_base.py  02_rag_pipeline.py  03_orchestration.py  README.md  config.yaml  pyproject.toml  verify_setup.py
modulo_03_gcp/src/: .env.example
modulo_03_gcp/src/01_role_base/: __init__.py  engine.py  main.py
modulo_03_gcp/src/02_rag/: __init__.py  main.py  step1_ingest.py  step2_split.py  step3_embed.py  step4_agent.py
modulo_03_gcp/src/03_orchestration/: __init__.py  chains.py  graph.py  main.py  router.py
modulo_03_gcp/src/shared/: __init__.py  config_loader.py  logger.py
modulo_03_langgraph/: README.md
modulo_03_openai/: 01_role_base.py  02_rag_pipeline.py  03_orchestration.py  config.yaml  pyproject.toml
modulo_03_openai/src/01_role_base/: __init__.py  engine.py  main.py  personas.py  tasks.py
modulo_03_openai/src/02_rag/: __init__.py  main.py  step1_ingest.py  step3_embed.py  step4_agent.py
modulo_03_openai/src/03_orchestration/: __init__.py  chains.py  graph.py  main.py  prompts.py  router.py
modulo_03_openai/src/shared/: __init__.py  config_loader.py  logger.py
modulo_04_gcp_deployment/: README.md
modulo_04_langgraph_gcp/: README.md  config.yaml  pyproject.toml  run_demo.py  verify_setup.py
modulo_04_langgraph_gcp/src/: .env.example
modulo_04_langgraph_gcp/src/agents/: __init__.py  analyst.py  creative.py  retriever.py  supervisor.py  synthesizer.py
modulo_04_langgraph_gcp/src/graph/: __init__.py  state.py  workflow.py
modulo_04_langgraph_gcp/src/prompts/: __init__.py  templates.py
modulo_04_langgraph_gcp/src/rag/: __init__.py  store.py
modulo_04_langgraph_gcp/src/shared/: __init__.py  config.py  logger.py
src/modulo_02_vector_databases/: __init__.py
src/modulo_02_vector_databases/shared/: __init__.py
