[project]
name = "modulo-02-vector-databases"
version = "0.1.0"
description = "Módulo 02: Bases de datos vectoriales, embeddings y RAG"
requires-python = ">=3.11"

# El paquete Python se encuentra en src/modulo_02_vector_databases/.
# Esta es la estructura src-layout recomendada por PyPA (Python Packaging Authority).
# Permite importar utilidades del módulo como una librería:
#   from modulo_02_vector_databases.shared.logger import get_logger
[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# hatchling detecta automáticamente src/modulo_02_vector_databases
# porque sigue la convención src-layout
packages = ["src/modulo_02_vector_databases"]
